--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,7 +1,7 @@
 {
-    "name": "mikes-garage",
-    "compatibility_date": "2025-12-06",
-    "assets": {
-        "directory": "./dist"
-    }
+  "name": "mikes-garage",
+  "compatibility_date": "2025-12-06",
+  "assets": {
+    "directory": "./dist",
+  },
 }
