--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,7 +1,8 @@
 {
-  "name": "mikes-garage",
-  "compatibility_date": "2025-12-06",
+  "name": "mikes",
+  "compatibility_date": "2024-12-19",
   "assets": {
-    "directory": "./dist",
-  },
+    "directory": "./dist/",
+    "not_found_handling": "single-page-application"
+  }
 }
